WEB | create a way for shelter to put animals under protection

--- a/projects/web/templates/components/Icon.html.twig
+++ b/projects/web/templates/components/Icon.html.twig
@@ -57,6 +57,10 @@
 	{% include 'components/icons/log-out.html.twig' with {size: size, class: class, color: color} %}
 {% elseif name == 'settings' %}
 	{% include 'components/icons/settings.html.twig' with {size: size, class: class, color: color} %}
+{% elseif name == 'shield' %}
+	{% include 'components/icons/shield.html.twig' with {size: size, class: class, color: color} %}
+{% elseif name == 'refresh-cw' %}
+	{% include 'components/icons/refresh-cw.html.twig' with {size: size, class: class, color: color} %}
 {% elseif name == 'edit-2' %}
 	{% include 'components/icons/edit-2.html.twig' with {size: size, class: class, color: color} %}
 {% elseif name == 'archive' %}
